# itch-io-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  install.bat  install_develop.bat  itch-io-downloader.json.placeholder
.github/workflows/: release.yml
addon/: manifest.json  script.js
src/: api.rs  config.rs  download.rs  game.rs  library.rs  main.rs  run.rs  utils.rs
src/download/: api.rs  config.rs  download_static.rs  error.rs  game.rs  library.rs  mod.rs  utils.rs
src/download/downloader/: download_mega.rs  mod.rs
