[package]
name = "itch-io-downloader"
description = "Download & play Itch.io games from the browser"
repository = "https://github.com/Vulae/itch-io-downloader"
license = "MIT"
version = "1.5.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.111"
indicatif = "0.17.7"
console = "0.15.8"
dialoguer = "0.11.0"
clap = { version = "4.4.18", features = ["derive"] }
mega = "0.7.0"
sluice = "0.5.5"
tokio-util = "0.7.10"
async-read-progress = "0.2.0"
